# telemarketgen

./: .gitignore  Dockerfile  Makefile  README.md  cli.py  pyproject.toml  ttv.py
ai/: audio.py  ideas.py  images.py  video.py
api/: app.py  background_tasks.py  models.py  settings.py  utils.py
api/templates/: base.html  clip.html  index.html
samples/ecoplaymat-dalle/: script.txt
