[tool.poetry]
name = "tmark"
version = "0.1.0"
description = "24 / 7 Streaming Telemarketer for TikTok"
authors = ["Jordan Dimov <jdimov@a115.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
transformers = "^4.38.2"
scipy = "^1.12.0"
uvicorn = "^0.27.1"
torch = "^2.2.1"
soundfile = "^0.12.1"
diffusers = "^0.26.3"
accelerate = "^0.27.2"
moviepy = "^1.0.3"
opencv-python = "^4.9.0.80"
typer = "^0.9.0"
loguru = "^0.7.2"
sqlalchemy = "^2.0.28"
pydantic-settings = "^2.2.1"
jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ruff = "^0.3.0"
mypy = "^1.8.0"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
